@@ -4,6 +4,6 @@ DIST kadu-sound-florkus.tar.bz2 1516660 RMD160 12d9e574fd97f2921dc4a5f2b8f7afb6b
 DIST kadu-sound-michalsrodek.tar.bz2 1420229 RMD160 e6137d8daf928aefea43f1f2a2157bed697e4c52 SHA1 d99d369c85e2fbe05597b6efdc5b6373a24e9b66 SHA256 e4ffb06cc9869c0d8eda20441d44b763c1d8cd692fcdf42ae7055bc926e7526b
 DIST kadu-sound-percussion.tar.bz2 351950 RMD160 f6142b2717af6c3dea4f3c464e795fa79ebc9282 SHA1 2878f6e80a2e9df98a5bfd95794cb7d1eba3486f SHA256 b5e57e9553ebe8b0b49ac162445ab412861e9ea05b01705de23017b0dd16e435
 DIST kadu-sound-ultr.tar.bz2 157561 RMD160 686dd6af845084ab3586c71ddb9a99b84ac47047 SHA1 f28b147b0c37a5e8cbf43c0474549f8b9cd01aea SHA256 fdcde1b3b9a140bac4373407cc53b3a095a4a4868870a9d19cf5a58c660f1a72
-EBUILD kadu-sounds-0.6.5.ebuild 773 RMD160 7b9a86fde215c0e0cf69fbec351bb69139a9744e SHA1 138e28696725e59832a29be6e9fac6df489e1638 SHA256 52f981d161ce0158827ee880d98e6b32b1262599fa33353dfa4b8f71408dcc53
-MISC ChangeLog 1352 RMD160 ddb9b9bba73929124889cbffa278089c0e0747a9 SHA1 472e9ce6c79cfddf40b3b10ccc6aabe39b2980cd SHA256 d778ca50c989e241729007b2ea983eb2145f217b0f6500fccf4dbc3a1b5c796e
+EBUILD kadu-sounds-0.6.5.ebuild 743 RMD160 264ffe9666ac49288e09d294f232739d2d36462d SHA1 60723b10f7b28a2046bce98c3b01d554d6f1d263 SHA256 465b4d473a7a712beeb904777c5ca0049d91beec593ea952782148461d337a36
+MISC ChangeLog 1444 RMD160 e31c8363c2f2e86d1c05ad86dc95672903dbb107 SHA1 67388554549988711334b3335e655f8caa387a9f SHA256 4cbf7e845aed861c0d725f99135a388efad9a69ff1b261a8b985db8c20f9efd3
 MISC metadata.xml 244 RMD160 fcdb1f5f93ea0a45207aa3ba4ec6cacbe527c0db SHA1 37fa1906c0e0ec9e8ee54787a8b97c1b23270f04 SHA256 e9d24a79e73b4d1d8577b7e887e96a818c4b807ed590c9b83de26cd30e0f0d3a
