@@ -1,6 +1,9 @@
 # ChangeLog for net-im/kadu-sounds
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  30 Jan 2012; Michał Ziąbkowski <mziab@o2.pl> kadu-sounds-0.6.5.ebuild:
+  Updated URIs.
 
   30 Jan 2010; Michał Ziąbkowski <mziab@o2.pl> kadu-sounds-0.6.5.ebuild:
   Abandoned redundant inherit.
